# tessvectors

./: .gitignore  LICENSE  MAST-README.md  QuaternionDetrending_Demo.ipynb  README.md  TESSQuats.py  TESSVectors.py  pyproject.toml
docs/: tessvectors_tutorial.ipynb
downsampled_quaternions/: tess_BinQuats_S001_C1_long.csv  tess_BinQuats_S001_C2_long.csv  tess_BinQuats_S001_C3_long.csv  tess_BinQuats_S001_C4_long.csv  tess_BinQuats_S002_C1_long.csv  tess_BinQuats_S002_C2_long.csv  tess_BinQuats_S002_C3_long.csv  tess_BinQuats_S002_C4_long.csv  tess_BinQuats_S003_C1_long.csv  tess_BinQuats_S003_C2_long.csv  tess_BinQuats_S003_C3_long.csv  tess_BinQuats_S003_C4_long.csv  tess_BinQuats_S004_C1_long.csv  tess_BinQuats_S004_C2_long.csv  tess_BinQuats_S004_C3_long.csv  tess_BinQuats_S004_C4_long.csv  tess_BinQuats_S005_C1_long.csv  tess_BinQuats_S005_C2_long.csv  tess_BinQuats_S005_C3_long.csv  tess_BinQuats_S005_C4_long.csv  tess_BinQuats_S006_C1_long.csv  tess_BinQuats_S006_C2_long.csv  tess_BinQuats_S006_C3_long.csv  tess_BinQuats_S007_C1_long.csv  tess_BinQuats_S007_C2_long.csv  tess_BinQuats_S007_C3_long.csv  tess_BinQuats_S008_C1_long.csv  tess_BinQuats_S009_C1_long.csv  tess_BinQuats_S009_C2_long.csv  tess_BinQuats_S009_C3_long.csv  tess_BinQuats_S010_C1_long.csv  tess_BinQuats_S010_C2_long.csv  tess_BinQuats_S010_C3_long.csv  tess_BinQuats_S010_C4_long.csv  tess_BinQuats_S011_C1_long.csv  tess_BinQuats_S011_C2_long.csv  tess_BinQuats_S011_C3_long.csv  tess_BinQuats_S012_C1_long.csv  tess_BinQuats_S013_C1_long.csv  tess_BinQuats_S013_C2_long.csv  (+45 more)
(+22 files in other folders)
